--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,7 +35,7 @@
 </nav>
 
 <div class="container mt-5">
-<div> COUCOU ALIX COMMENT CA VA JTM POUR INFO </div>
+<h1 style="color: blueviolet;font-size: 300%;"> COUCOU ALIX COMMENT CA VA JTM POUR INFO </h1>
   <div class="row">
     <div class="col-sm-4">
       <h2>About Meeeeee</h2>
