--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,7 +35,7 @@
 </nav>
 
 <div class="container mt-5">
-<h1 style="color: blueviolet;font-size: 300%;"> OUAIS CEST MON SITE MON FILS MA BATAILLE </h1>
+<h1 style="color: blueviolet;font-size: 300%; font-family: 'Comic Sans MS';"> OUAIS CEST MON SITE MON FILS MA BATAILLE </h1>
   <div class="row">
     <div class="col-sm-4">
       <h2>About Meeeeee</h2>
